--- a/Project-Aurora/Plugin-Pushbullet/Plugin-Pushbullet.csproj
+++ b/Project-Aurora/Plugin-Pushbullet/Plugin-Pushbullet.csproj
@@ -59,7 +59,9 @@
       <DependentUpon>Control_ExampleLayer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Layers\PushBulletLayerHandler.cs" />
+    <Compile Include="Models\MobileApplicationType.cs" />
     <Compile Include="Models\PushBulletBase.cs" />
+    <Compile Include="Models\PushBulletPush.cs" />
     <Compile Include="PluginMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pushbullet\DataStream.cs" />
