--- a/Project-Aurora/Plugin-Pushbullet/Plugin-Pushbullet.csproj
+++ b/Project-Aurora/Plugin-Pushbullet/Plugin-Pushbullet.csproj
@@ -94,8 +94,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)..\build\debug\Plugins\$(ProjectName).dll"
-copy /Y "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)..\build\debug\Plugins\$(ProjectName).pdb"
+    <PostBuildEvent>copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)..\build\debug\$(ProjectName).dll"
+copy /Y "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)..\build\debug\$(ProjectName).pdb"
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
